--- a/todoList.css
+++ b/todoList.css
@@ -127,33 +127,7 @@ body {
     border-radius: 10px;
     padding: 10px 15px;
   }
-  
-  .warpper .header {
-    font-size: 30px;
-    font-weight: 700;
-    padding: 10px 5px;
-  }
-  
-  .warpper .inputField {
-    width: 100%;
-    height: 40px;
-    padding: 10px 0;
-    display: flex;
-  }
-  
-  .inputField input {
-    width: 85%;
-    height: 100%;
-    outline: none;
-    font-size: 20px;
-    border: 1px solid #ccc;
-    transition: all 0.5s ease;
-    border-radius: 3px;
-    cursor: default;
-    padding-right: 3px;
-    padding:0px 6px
-  }
-  
+
   .inputField input:focus {
     border-color: #8E49E8;
   }
@@ -167,7 +141,6 @@ body {
     color: #fff;
     font-size: 27px;
     border-radius: 3px;
-    cursor: pointer;
   }
   
   .todolist {
@@ -175,58 +148,30 @@ body {
   }
   
   .todolist li {
-    list-style: none;
-    background-color: #ccc;
-    margin-top: 8px;
-    position: relative;
-    cursor: default;
-    padding: 10px 15px; 
-    overflow: hidden;
-    border-radius: 3px;
     font-size: 30px;
   }
   
 
   
   .todolist span {
-    background-color: red;
-    color: #fff;
+    border-radius: 0px 3px 3px 0;
     width: 20px;
     padding: 10px 15px;
     position: absolute;
     top:50%;  
     right: 0px;
-    transform: translateY(-50%);
-    transition: all 0.3s ease;
-    cursor: pointer;
   }
   
   .footer {
-    width: 100%;
-    padding: 10px 10px;
-    display: flex;
-    justify-content: space-between;
     margin-top: 50px;
   }
   
   .footer span {
-    margin: 5px -7px;
     font-size: 25px;
   }
   
-  .footer .itemNum {
-    margin: 1.1px;
-  }
   
   .footer button {
-    height: 30px;
-    margin: 5px 10px;
-    border:none;
-    background-color: #fab378;
-    color: #fff;
-    padding: 3px 5px;
-    border-radius: 3px;
-    cursor: pointer;
     font-size: 20px;
   }
 }
