--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Noto+Sans+TC:wght@400;500&family=Poppins:wght@200;300;400;500;600&display=swap');
 
 :root {
   --bg-black-900:#f2f2fc;
@@ -14,6 +14,7 @@ body {
   line-height: 1.5;
   font-size: 16px;
   font-family: 'Poppins' sans-serif;
+  overflow-x: hidden ;
 }
 
 *{
@@ -156,21 +157,12 @@ ul {
   position: absolute;
   width: 20px;
   height: 20px;
-  border-bottom: 5px solid var(--skin-color);
+  border-top: 5px solid var(--skin-color);
   border-left: 5px solid var(--skin-color);
-  bottom: 0;
+  top: 0;
   left: 0;
 }
-.aside .logo a::after {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border-top: 5px solid var(--skin-color);
-  border-right: 5px solid var(--skin-color);
-  top: 0;
-  right: 0;
-}
+
 
 .aside .nav-toggler {
   height: 40px;
@@ -232,9 +224,6 @@ ul {
   padding: 5px 15px;
 }
 
-.aside .nav li a.active {
-  color:var(--skin-color);
-}
 
 .aside .nav li a i {
   margin-right:15px ;
@@ -253,6 +242,11 @@ ul {
 .home .home-info {
   flex: 0 0 60%;
   max-width: 60%;
+}
+
+.home .home-info p {
+  font-family: "Noto Sans Traditional Chinese",sans-serif;
+  padding-top: 20px;
 }
 
 h3.hello {
@@ -346,8 +340,8 @@ h3.my-profession {
 }
 
 .about .about-content .education , .about .about-content .experience {
-  flex: 0 0 50% ;
-  max-width: 50%;
+  flex: 0 0 100% ;
+  max-width: 100%;
   margin-top: 30px;
 }
 
@@ -427,6 +421,7 @@ h3.my-profession {
   position: relative;
   padding-left: 37px;
   padding-bottom: 50px;
+  
 }
 
 .about .about-content .time .time-item:last-child{
@@ -442,6 +437,45 @@ h3.my-profession {
   top: 0;
   background-color: var(--skin-color);
 }
+
+.about .about-content .time .time-item .img {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.about .about-content .time .time-item .img p {
+ font-size: 15px;
+ color: gray;
+ padding: 5px;
+}
+
+.about .about-content .time .time-item .time-text{
+  padding: 10px;
+}
+
+.about .about-content .time .time-item .time-text  {
+  text-decoration: none;
+  font-family:"Noto Sans Traditional Chinese Regular 400", sans-serif ;
+  text-align:justify;
+}
+
+
+.about .about-content .time .time-item img {
+  width: 700px;
+  margin-top: 10px;
+  max-height:300px ;
+  transition: all 0.2s ease;
+}
+
+
+.about .about-content .time .time-item #react {
+  width: 400px;
+  margin-top: 10px;
+  max-height:400px ;
+}
+
  .time .timecircle-dot 
 {
   position: absolute;
